Event Management  - Room filter: added ability to select event rooms within a department     - Event Rooms are no longer an option in the Departments dropdown, but there is a toggle "Only event locations"     - When only showing event rooms, do not show rooms that have event management disabled directly on the room (using room event status)  - Add Meetings: added vertical scroll-bar when the dialog does not fit the screen  - Add Meetings: when it is not allowed to use the room, show the appropriate message as a conflict  - Add Event: fixed the occasional warnings "Failed to hide academic session info" and "It is not allowed to create an event"

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -2394,6 +2394,7 @@ div.gwt-MenuBarPopup {
 
 .unitime-MeetingSelection .conflict {
 	color: red;
+	text-align: left;
 }
 
 .unitime-MeetingSelection .date {
@@ -2818,4 +2819,9 @@ unitime-RoomSharingWidget .legend .blank {
 
 .unitime-RoomHint .minimap {
 	border: 1px solid #9CB0CE;
+}
+
+.unitime-VerticalScrollPanel {
+	overflow-x: hidden !important;
+    overflow-y: auto !important;
 }
